syntax = "proto3";

option csharp_namespace = "Discount.gRPC.Protos";

service DiscountProtoService{
    rpc GetDiscountAsync(GetDiscountRequest) returns (CouponModel);
    rpc CreateDiscountAsync(CreateDiscountRequest) returns (CouponModel);
    rpc UpdateDiscountAsync(UpdateDiscountRequest) returns (CouponModel);
    rpc DeleteDiscountAsync(DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest{
    string productName = 1;
}

message CreateDiscountRequest{
    CouponModel couponModel = 1;
}

message UpdateDiscountRequest{
    CouponModel couponModel = 1;
}

message DeleteDiscountRequest{
    string productName = 1;
}

message DeleteDiscountResponse{
    bool success = 1;
}

message CouponModel{
    int32 id = 1;
    string productName = 2;
    string description = 3;
    int32  amount = 4;
}